// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Divider > renders a brand appearance 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="fish-ui-Divider ___1cnxtl0_1wkvbo3 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq f16muhyy fcbuu2a f1wdw2dr f1582fpk f1ttio3w f1ahrvm8 f1cd3wbc fvrapl0 f17hbk9y fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj f1ojjlep f12w1bnb"
    role="separator"
  >
    <span
      class="fish-ui-Divider__wrapper"
    >
      Brand
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders a default divider 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="fish-ui-Divider ___150m63w_9myuuy0 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq fkfq4zb f1vccso1 f1geml7w f1r7kh1m fjml6kk f16j7guv fx01ahm fl8d8yv fj1a37q fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj fzynn9s fekrn8e f1kyqvp9 fesgyo"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Divider > renders a divider with content 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="fish-ui-Divider ___1ljmt04_1p17wkt f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq fkfq4zb f1vccso1 f1geml7w f1r7kh1m fjml6kk f16j7guv fx01ahm fl8d8yv fj1a37q fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj f1ojjlep f12w1bnb"
    role="separator"
  >
    <span
      class="fish-ui-Divider__wrapper"
    >
      Default Divider
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders a divider with inset 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="fish-ui-Divider ___1iyhaq4_94gnof0 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq fkfq4zb f1vccso1 f1geml7w f1r7kh1m fjml6kk f16j7guv fx01ahm fl8d8yv fj1a37q fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj fjlbh76 f11qrl6u f1ojjlep f12w1bnb"
    role="separator"
  >
    <span
      class="fish-ui-Divider__wrapper"
    >
      Inset
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders a horizontal divider with a fixed width 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="fish-ui-Divider ___1ljmt04_1p17wkt f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq fkfq4zb f1vccso1 f1geml7w f1r7kh1m fjml6kk f16j7guv fx01ahm fl8d8yv fj1a37q fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj f1ojjlep f12w1bnb"
    role="separator"
    style="width: 100px;"
  >
    <span
      class="fish-ui-Divider__wrapper"
    >
      fixed 100px width
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders a strong appearance 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="fish-ui-Divider ___nssfpl0_jy36n10 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq f19n0e5 f10tv6oz f16xp3sf fwrmqbx f1seuxxq ft83z1f f1g4150c f1qnawh6 f192dr6e fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj f1ojjlep f12w1bnb"
    role="separator"
  >
    <span
      class="fish-ui-Divider__wrapper"
    >
      Strong
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders a subtle appearance 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="fish-ui-Divider ___vmmrf10_1fkiwfi f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq f11d4kpn f5g06un f13sxdku f1x6bl8t f1n015lb fvod1wy fwslg65 f103fvts flk0e17 fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj f1ojjlep f12w1bnb"
    role="separator"
  >
    <span
      class="fish-ui-Divider__wrapper"
    >
      Subtle
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders a vertical divider 1`] = `
<DocumentFragment>
  <div
    aria-orientation="vertical"
    class="fish-ui-Divider ___17p6jwa_1svfxbs f122n59 f1ewtqcl f22iagw f1vx9l62 fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq fkfq4zb f1vccso1 f1geml7w f1r7kh1m fjml6kk f16j7guv fx01ahm fl8d8yv fj1a37q f16gbxbe f1yq6w5o f9sc749 f1zq0ye flthirb f13hvwk3 f1aywhqu f1kyqvp9 fesgyo fzynn9s fekrn8e"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Divider > renders a vertical divider with a fixed height 1`] = `
<DocumentFragment>
  <div
    aria-orientation="vertical"
    class="fish-ui-Divider ___5buc1s0_obuhr90 f122n59 f1ewtqcl f22iagw f1vx9l62 fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq fkfq4zb f1vccso1 f1geml7w f1r7kh1m fjml6kk f16j7guv fx01ahm fl8d8yv fj1a37q f1tjaq3g f1yq6w5o f9sc749 f1zq0ye flthirb f13hvwk3 f1aywhqu fg2pwug f8vk40g"
    role="separator"
    style="height: 100px;"
  >
    <span
      class="fish-ui-Divider__wrapper"
    >
      fixed 100px height
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders a vertical divider with content 1`] = `
<DocumentFragment>
  <div
    aria-orientation="vertical"
    class="fish-ui-Divider ___5buc1s0_obuhr90 f122n59 f1ewtqcl f22iagw f1vx9l62 fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq fkfq4zb f1vccso1 f1geml7w f1r7kh1m fjml6kk f16j7guv fx01ahm fl8d8yv fj1a37q f1tjaq3g f1yq6w5o f9sc749 f1zq0ye flthirb f13hvwk3 f1aywhqu fg2pwug f8vk40g"
    role="separator"
  >
    <span
      class="fish-ui-Divider__wrapper"
    >
      Vertical
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders content center aligned 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="fish-ui-Divider ___1ljmt04_1p17wkt f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s f13zj6fq fkfq4zb f1vccso1 f1geml7w f1r7kh1m fjml6kk f16j7guv fx01ahm fl8d8yv fj1a37q fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj f1ojjlep f12w1bnb"
    role="separator"
  >
    <span
      class="fish-ui-Divider__wrapper"
    >
      Center
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders content end aligned 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="fish-ui-Divider ___q7c4t00_1twvuei f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f1wl9k8s fkfq4zb f1vccso1 f1geml7w f1r7kh1m fjml6kk f16j7guv fx01ahm fl8d8yv fj1a37q fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj f1ojjlep f13zj6fq f12w1bnb f1ayce8x"
    role="separator"
  >
    <span
      class="fish-ui-Divider__wrapper"
    >
      End
    </span>
  </div>
</DocumentFragment>
`;

exports[`Divider > renders content start aligned 1`] = `
<DocumentFragment>
  <div
    aria-orientation="horizontal"
    class="fish-ui-Divider ___aey5h20_tb3vb90 f122n59 f1ewtqcl f22iagw f1063pyq fqerorx f10pi13n fk6fouc fy9rknc figsok6 fwrc4pm f17mccla fyl8oag f16vkdww fhsnbul f1gw3sf2 f1ly5f7u f1s3tz6t f13zj6fq fkfq4zb f1vccso1 f1geml7w f1r7kh1m fjml6kk f16j7guv fx01ahm fl8d8yv fj1a37q fly5x3f f163fonl f51yk4v f1md1vr4 f8rth92 f6czdpx f1a4oiuj f1wl9k8s f1ojjlep f1he2m4d f12w1bnb"
    role="separator"
  >
    <span
      class="fish-ui-Divider__wrapper"
    >
      Start
    </span>
  </div>
</DocumentFragment>
`;
